--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@ body {
 ​
 <div class="card">
   <h1>
-    ⭐ 여기 문구를<br>
-    원하는 문장으로 바꿔보세요
+    ⭐ 아니 근데 진짜<br>
+    꼭 눌러봐라
   </h1>
 ​
   <div class="btn-container" id="btnArea">
@@ -119,7 +119,7 @@ body {
   </div>
 ​
   <div class="result" id="result">
-    ❤️ 여기 결과 문구 수정 ❤️
+    ❤️ 뭘보노 ❤️
   </div>
 </div>
 ​
