--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-    background-image:
+​
+  /* ⭐ 배경 이미지 수정하려면 01.jpg 파일 교체 */
+  background-image:
     linear-gradient(rgba(0,0,0,0.35), rgba(0,0,0,0.35)),
     url("01.jpg");
 ​
@@ -39,7 +41,9 @@ body {
   max-width: 420px;
   width: 100%;
 }
-  h1 {
+​
+/* ⭐ 여기 문구 수정 */
+h1 {
   font-size: 20px;
   margin-bottom: 24px;
   line-height: 1.6;
@@ -109,8 +113,8 @@ body {
 ​
 <div class="card">
   <h1>
-    ⭐ 아니 근데 진짜<br>
-    꼭 눌러봐라
+    ⭐ 이거 진심<br>
+    찐으로 개쩌네
   </h1>
 ​
   <div class="btn-container" id="btnArea">
@@ -119,7 +123,7 @@ body {
   </div>
 ​
   <div class="result" id="result">
-    ❤️ 뭘보노 ❤️
+    ❤️ 좋구만 ❤️
   </div>
 </div>
 ​
